--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 			<version>3.12.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
 
 	</dependencies>
 
