--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.jackson.serialization.write-durations-as-timestamps=true
+spring.sql.init.mode=always
+
+spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password 
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
