--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.sql.init.mode=always
 
+#todo del
 #spring.datasource.url=jdbc:h2:file:./db/filmorate
 spring.datasource.url=jdbc:h2:mem:filmorate
 
